--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "billing-system",
+  "name": "billingsystem",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "nodemon --exec electron . & npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^28.2.1"
+    "electron": "^28.2.2",
+    "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "nodemon": "^3.0.3"
   }
 }
