--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "nodemon --exec electron . & npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^28.2.2",
-    "tailwindcss": "^3.4.1"
-  },
-  "dependencies": {
-    "nodemon": "^3.0.3"
+    "electron-is-dev": "^3.0.1"
   }
 }
