--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "commonjs",
   "scripts": {
-    "start": "electron .",
+    "start": " electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +13,8 @@
   "devDependencies": {
     "electron": "^28.2.2",
     "electron-is-dev": "^3.0.1"
+  },
+  "dependencies": {
+    "nodemon": "^3.0.3"
   }
 }
