--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-is-dev": "^3.0.1"
   },
   "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1",
     "nodemon": "^3.0.3",
     "reflect-metadata": "^0.2.1",
     "sqlite3": "^5.1.7",
